--- a/css/home-style.css
+++ b/css/home-style.css
@@ -4,7 +4,6 @@ body {
 
 .home {
     margin:auto;
-    width: 1280px;
     height: 800px;
     background-color: #333;
     display: flex;
@@ -40,8 +39,9 @@ body {
     line-height: 1.71;
     text-align: center;
     position: relative;
-    top: 104px;
+    top: 146px;
     font-weight: 400;
+    margin-top: 0;
 }
 #tagline {
     font-size: 42px;
