--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ h1 {
     margin-top: 0;
 }
 
-h2 {
+#services-page-h2 {
     margin-top: 0; font-size: 1.2em;
     text-align: center;
     font-size: 22px;
